--- a/map.html
+++ b/map.html
@@ -109,12 +109,7 @@ function createMarker(place) {
 }
 
 function addToFavs(fav) {
-	navigator.notification.alert(
-            'You are the winner!',  // message
-            alertDismissed,         // callback
-            'Game Over',            // title
-            'Done'                  // buttonName
-        );
+	alert(fav + ' added to favourites.');
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
