--- a/fav.html
+++ b/fav.html
@@ -54,7 +54,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Coffee Finder</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead" id="fav">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="map.html" class="btn btn-lg btn-default"><i class="fa fa-search"></i>Find Nearby Coffee</a>
             </p>
@@ -77,5 +77,8 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	<script>
+		document.getElementById("fav").innerText = localStorage.getItem("cofeeFinderFavs");
+	</script>
   </body>
 </html>
