--- a/map.html
+++ b/map.html
@@ -109,7 +109,13 @@ function createMarker(place) {
 }
 
 function addToFavs(fav) {
-	alert(fav + ' added to favourites.');
+	if(typeof(Storage) !== "undefined") {
+		// Code for localStorage/sessionStorage.
+		localStorage.setItem("cofeeFinderFavs", fav);
+	} else {
+		// Sorry! No Web Storage support..
+		alert('Cannot add '+fav + ' to favourites.');
+	}
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
