--- a/map.html
+++ b/map.html
@@ -110,7 +110,7 @@ function createMarker(place) {
 	var found = false;
 	for(var i=0;i<arr.length;i++)
 	{
-		if(fav == arr[i])
+		if(place.name.trim() == arr[i])
 		{ found = true;}
 	}
 	if(!found)
