--- a/fav.html
+++ b/fav.html
@@ -78,7 +78,12 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script>
-		document.getElementById("fav").innerText = localStorage.getItem("cofeeFinderFavs");
+		var favs = localStorage.getItem("cofeeFinderFavs");
+		arr = favs.split(";");
+		for(var i=0;i<arr.length;i++)
+		{
+			document.getElementById("fav").innerText = arr[i] + "<br>";
+		}
 	</script>
   </body>
 </html>
