--- a/map.html
+++ b/map.html
@@ -97,9 +97,11 @@ function callback(results, status) {
 
 function createMarker(place) {
   var placeLoc = place.geometry.location;
+  var image = 'marker.png';
   var marker = new google.maps.Marker({
     map: map,
-    position: place.geometry.location
+    position: place.geometry.location,
+	icon: image
   });
 
   google.maps.event.addListener(marker, 'click', function() {
