--- a/fav.html
+++ b/fav.html
@@ -87,7 +87,7 @@
 		for(var i=0;i<arr.length;i++)
 		{
 			if(arr[i] != "")
-				document.getElementById("fav").innerHTML += '<a href="#" class="btn btn-lg btn-default" onclick="getFavMap(\''+arr[i]+'\'); return false;">Find Nearby '+arr[i]+'</a><br>';
+				document.getElementById("fav").innerHTML += '<a href="#" class="btn btn-lg btn-default" onclick="getFavMap(\''+arr[i]+'\'); return false;">Find Nearby '+arr[i]+'</a><br><br>';
 		}
 		
 		function getFavMap(favString) {
